changed alignment of text. fixed border issue

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
   /* Font sizes for the about section */
   --about-section-font-size-h2: 1.9rem;
   --about-section-font-size-h3: 1.7rem;
-  --about-section-font-size-p: 1.4rem;
+  --about-section-font-size-p: 1.6rem;
 
   /* Font sizes for the project section */
   --project-section-font-size-p: 1.3rem;
@@ -30,6 +30,7 @@
 html {
   font-size: 100%;
   box-sizing: border-box;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 body {
@@ -37,6 +38,7 @@ body {
   margin: 0;
   padding: 0;
   max-width: 100%;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 h1,
@@ -165,7 +167,7 @@ section {
   flex: 1;
   max-width: 75%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
 }
 
 #about h2 {
@@ -275,7 +277,7 @@ section {
   max-width: 500px; /* Set a maximum width for project items */
   box-sizing: border-box;
   padding: 1rem;
-  text-align: center; /* Ensures text is centered */
+  text-align: left; /* Ensures text is centered */
   box-shadow: 0px 2px 2px rgba(67, 14, 212, 0.1);
 }
 
